syntax = "proto3";

package org.csystem.generator.random;

option java_multiple_files = true;

service RandomTextGeneratorService {
  rpc GenerateTextEN(TextGenerateInfo) returns (TextInfo);
  rpc GenerateTextTR(TextGenerateInfo) returns (TextInfo);
  rpc GenerateTextsEN(TextsGenerateInfo) returns (stream TextInfo); //Server side streaming RPC
  rpc GenerateTextsTR(TextsGenerateInfo) returns (stream TextInfo); //Server side streaming RPC
  rpc GenerateAndJoinTextsEN(stream TextGenerateInfo) returns (TextInfo); //Client side streaming RPC
  rpc GenerateAndJoinTextsTR(stream TextGenerateInfo) returns (TextInfo); //Client side streaming RPC
  rpc GenerateMultipleTextsEN(stream TextGenerateInfo) returns (stream TextInfo); //Bidirectional streaming RPC
  rpc GenerateMultipleTextsTR(stream TextGenerateInfo) returns (stream TextInfo); //Bidirectional streaming RPC
  rpc GetTextBound(NoParam) returns (TextBound);

  rpc GenerateTextsFileEN(TextsFileGenerateInfo) returns (stream Chunk);
  rpc GenerateTextsFileTR(TextsFileGenerateInfo) returns (stream Chunk);

  rpc GenerateInt32(Int32GenerateInfo) returns (Int32Result); //TODO
  rpc GenerateDouble(DoubleGenerateInfo) returns (DoubleResult); //TODO
  rpc GenerateInt64(Int64GenerateInfo) returns (Int64Result); //TODO
  rpc GenerateInt32s(Int32sGenerateInfo) returns (stream Int32Result); //TODO
  rpc GenerateDoubles(DoublesGenerateInfo) returns (stream DoubleResult); //TODO
  rpc GenerateInt64s(Int64sGenerateInfo) returns (stream Int64Result); //TODO
};

message NoParam {}

message TextBound {
  sint32 minCount = 1;
  sint32 maxCount = 2;
}

message TextGenerateInfo {
  string username = 1;
  sint32 count = 2;
}

message TextsGenerateInfo {
  string username = 1;
  sint32 count = 2;
  sint32 n = 3;
}

message TextsFileGenerateInfo {
  string username = 1;
  sint32 count = 2;
  sint32 n = 3;
  string fileName = 4;
}

message Chunk {
  bytes data = 1;
  sint32 size = 2;
}

message TextInfo {
  string text = 1;
}

message Int32GenerateInfo {
  string username = 1;
  sint32 min = 2;
  sint32 bound = 3;
}

message Int32sGenerateInfo {
  string username = 1;
  sint32 min = 2;
  sint32 bound = 3;
  sint32 count = 4;
}

message Int32Result {
  sint32 value = 1;
}

message DoubleGenerateInfo {
  string username = 1;
  double min = 2;
  double bound = 3;
}

message DoubleResult {
  double value = 1;
}

message DoublesGenerateInfo {
  string username = 1;
  double min = 2;
  double bound = 3;
  sint32 count = 4;
}

message Int64GenerateInfo {
  string username = 1;
  sint64 min = 2;
  sint64 bound = 3;
}

message Int64sGenerateInfo {
  string username = 1;
  sint64 min = 2;
  sint64 bound = 3;
  sint32 count = 4;
}

message Int64Result {
  sint64 value = 1;
}


